--- a/_viewTicket.html
+++ b/_viewTicket.html
@@ -1,10 +1,12 @@
 <div class="container text-center" id="_viewTicket">
 
-    <div class="col-xs-12">
-        <h2 id="listName"></h2>
-    </div>
-
     <div class="container box">
+        <div class="row">
+            <div class="col-xs-12">
+                <h2 id="listName"></h2>
+            </div>
+        </div>
+
         <div class="row" >
             <div class="col-xs-12">
                 <ul id="_viewTicket_list"></ul>
@@ -34,5 +36,4 @@
     </div>
 
 </div>
-
 <script src="js/_viewTicket.js"></script>
