--- a/_tickets.html
+++ b/_tickets.html
@@ -25,7 +25,7 @@
 
             <div class="col-xs-6 col-md-3">
                 <div class="store selected" data-name="wholeFoods">
-                    <h4>WholeFoods</h4>
+                    <h4>WHOLEFOODS</h4>
                 </div>
             </div>
 
