--- a/_cancelTicket.html
+++ b/_cancelTicket.html
@@ -5,7 +5,9 @@
             <h2>Cancel pending order.</h2>
 
             <div class="row">
-                <button id="submit_cancelTicket" type="button" class="btn btn-primary" style="margin-bottom: 10%">Confirm</button>
+                <button id="submit_cancelTicket" type="button" class="btn btn-primary" style="margin-bottom: 10%">
+                    Confirm
+                </button>
             </div>
         </div>
     </div>
