--- a/_shoppingStatus.html
+++ b/_shoppingStatus.html
@@ -1,6 +1,6 @@
 <div id="_shoppingStatus" class="container  box2 text-center">
     <h2>Shopping Status</h2>
-    <p>At this moment, <span class = shoppingStatus_driver_name></span> is shopping for your items.</p>
+    <p>At this moment, <span class=shoppingStatus_driver_name></span> is shopping for your items.</p>
     <div class="row">
         <div class="col-lg-offset-3 col-lg-6 col-sm-offset-3 col-sm-6">
             <div class="card hovercard">
