--- a/_cancelled.html
+++ b/_cancelled.html
@@ -3,9 +3,9 @@
         <div class="col-xs-4-offset-4">
             <div>
                 <h2>Payment has been cancelled.</h2>
-                <button id="submit_cancelled" type="button" class="btn btn-primary">
+                <a id="submit_cancelled" type="button" class="btn waves-effects orange">
                     Confirm
-                </button>
+                </a>
             </div>
         </div>
     </div>
