--- a/_history.html
+++ b/_history.html
@@ -1,7 +1,7 @@
 <div id="_history" class="container text-center">
     <div class="container box">
         <div class="row">
-            <div class="col-xs-12">
+            <div class="col-xs-4-offset-4">
                 <div>
                     <h2 class="">Your Orders</h2>
                 </div>
@@ -9,7 +9,7 @@
         </div>
 
         <div class="row">
-            <div class="col-xs-12">
+            <div class="col-xs-4-offset-4">
                 <div>
                     <h3>Pending Tickets</h3>
                     <ul id="yourOrders_pending_tickets" class=text-center"></ul>
