--- a/_shopping.html
+++ b/_shopping.html
@@ -4,13 +4,13 @@
     <div class="container box">
 
         <div class="row" id="shoppingHeader">
-            <div class="col-xs-12">
+            <div class="col-xs-4-offset-4">
                 <h2>Shopping List</h2>
             </div>
         </div>
 
         <div class="row">
-            <div class="col-xs-12">
+            <div class="col-xs-4-offset-4">
                 <form id="shopping_list_form">
                 <span><input id="shoppingCheckListItem" class="input" type="text" name="checkListItem"
                              placeholder="What do you need?" autocomplete="off"
@@ -23,7 +23,7 @@
         </div>
 
         <div class="row">
-            <div class="col-xs-12">
+            <div class="col-xs-4-offset-4">
                 <div class="todo-footer">
                     <div class = "row" id="footerInfo">
                         <div class = "col-xs-4" id="shopping_numItems"></div>
