--- a/_congrats_driver_finish_shopping.html
+++ b/_congrats_driver_finish_shopping.html
@@ -1,7 +1,7 @@
 
 <div class="container box2 text-center">
     <div class="row">
-        <div class="col-xs-12">
+        <div class="col-xs-4-offset-4">
             <div>
                 <h2> Congratulations!</h2>
                 </p> We posted your ticket, and you will be notified as soon as it's accepted! </p>
