--- a/_driverList.html
+++ b/_driverList.html
@@ -10,7 +10,7 @@
 
         <div class="container box text-center">
             <div class="row" id="driverListHeader">
-                <div class="col-xs-12">
+                <div class="col-xs-4-offset-4">
                     <div>
                         <h2 id="listName_driverList"></h2>
                         <h3 id="phone"></h3>
@@ -18,13 +18,13 @@
                 </div>
             </div>
             <div class="row" >
-                <div class="col-xs-12">
+                <div class="col-xs-4-offset-4">
                     <ul id="_driverList2_list"></ul>
                 </div>
             </div>
 
             <div class = "row">
-                <div class="col-xs-12">
+                <div class="col-xs-4-offset-4">
                     <div class="driver-footer">
                         <div class = "row" id="_driver_footerInfo">
                             <div class="col-xs-4" id="_driver_numItems"></div>
