--- a/_viewTicket.html
+++ b/_viewTicket.html
@@ -1,18 +1,18 @@
 <div class="container text-center" id="_viewTicket">
 
-    <div class="col-xs-12">
+    <div class="col-xs-4-offset-4">
         <h2 id="listName"></h2>
     </div>
 
     <div class="container box">
         <div class="row" >
-            <div class="col-xs-12">
+            <div class="col-xs-4-offset-4">
                 <ul id="_viewTicket_list"></ul>
             </div>
         </div>
 
         <div class = "row">
-            <div class="col-xs-12">
+            <div class="col-xs-4-offset-4">
                 <div class="driver-footer">
                     <div id="_viewTicket_footerInfo">
                         <div id="_viewTicket_numItems"></div>
