--- a/_yourDeliveries.html
+++ b/_yourDeliveries.html
@@ -2,12 +2,12 @@
     <div class="row">
         <div class="container box">
             <div class="row">
-                <div class="col-xs-12">
+                <div class="col-xs-4-offset-4">
                     <h2>Your Deliveries</h2>
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-12">
+                <div class="col-xs-4-offset-4">
                     <h3>Accepted Tickets</h3>
                     <ul id="yourDeliveries_accepted_tickets"></ul>
                 </div>
@@ -22,7 +22,7 @@
     <div class="row">
         <div class="container box">
             <div class="row">
-                <div class="col-xs-12">
+                <div class="col-xs-4-offset-4">
                     <h3>Shopped Tickets</h3>
                     <ul id="yourDeliveries_shopped_tickets"></ul>
                 </div>
@@ -37,7 +37,7 @@
     <div class="row">
         <div class="container box">
             <div class="row">
-                <div class="col-xs-12">
+                <div class="col-xs-4-offset-4">
                     <h3>Delivered Tickets</h3>
                     <ul id="yourDeliveries_delivered_tickets"></ul>
                 </div>
