--- a/_checkout.html
+++ b/_checkout.html
@@ -74,8 +74,8 @@
             </div>
 
             <div class="row" style="text-align: center">
-                <button type="button" id="checkout_submitcheckout" class="btn btn-default">Continue</button>
-                <button type="button" id="checkout_close" class="btn btn-default">Close</button>
+                <a type="button" id="checkout_submitcheckout" class="btn waves-effects orange">Continue</a>
+                <a type="button" id="checkout_close" class="btn waves-effects orange">Close</a>
             </div>
 
         </div>
