--- a/_congratsTicketClosed.html
+++ b/_congratsTicketClosed.html
@@ -5,9 +5,9 @@
             <div>
                 <h2> Congratulations!</h2>
                 <p> This ticket has been successfully closed. </p>
-                <button type="button" class="btn btn-link" id="_congratsClosed">
+                <a type="button" class="btn waves-effects orange" id="_congratsClosed">
                     Go To You Orders
-                </button>
+                </a>
             </div>
         </div>
     </div>
