--- a/_congrats_driver_finish_shopping.html
+++ b/_congrats_driver_finish_shopping.html
@@ -5,9 +5,9 @@
             <div>
                 <h2> Congratulations!</h2>
                 </p> We posted your ticket, and you will be notified as soon as it's accepted! </p>
-                <button type="button" class="btn btn-link">
+                <a type="button" class="btn waves-effects orange">
                     Go To You Deliveries
-                </button>
+                </a>
             </div>
         </div>
     </div>
