--- a/_contact.html
+++ b/_contact.html
@@ -24,7 +24,7 @@
                         <strong>Danger!</strong> There are some empty fields!
                     </div>
                 </div>
-                <div type="submit" id="contact_submit" class="btn btn-primary">Send</div>
+                <a type="submit" id="contact_submit" class="btn waves-effects orange">Send</a>
             <!--</form>-->
         </div>
     </div>
