--- a/_driverList.html
+++ b/_driverList.html
@@ -28,9 +28,9 @@
                     <div class="driver-footer">
                         <div class = "row" id="_driver_footerInfo">
                             <div class="col-xs-4" id="_driver_numItems"></div>
-                            <button class="col-x-4" id="_driver_submit_list" type="button" class="btn btn-link">
+                            <a class="col-x-4" id="_driver_submit_list" type="button" class="waves-teal btn-flat waves-effects orange">
                                     <h6>submit</h6>
-                            </button>
+                            </a>
                         </div>
                     </div>
                 </div>
