--- a/_confirmCompletion.html
+++ b/_confirmCompletion.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="row text-center">
+    <div class="row text-center box2">
         <div class="col-xs-4-offset-4">
             <h2> Confirm your delivery</h2>
 
@@ -40,7 +40,7 @@
 
 
 
-            <button type="button" class="btn btn-link" id="driver_confirm_button">Confirm</button>
+            <a type="button" class="btn waves-effects orange" id="driver_confirm_button">Confirm</a>
         </div>
     </div>
 </div>
