--- a/_confirmTicket.html
+++ b/_confirmTicket.html
@@ -40,7 +40,7 @@
 
 
 
-            <button type="button" class="btn btn-link" id="confirm_button">Confirm</button>
+            <a type="button" class="btn waves-effects orange" id="confirm_button">Confirm</a>
         </div>
     </div>
 </div>
