--- a/_passwordReset.html
+++ b/_passwordReset.html
@@ -7,7 +7,7 @@
                 <!--<form>-->
                     <div class="input-field">
                         <label for="pass1">Enter New Password</label>
-                        <input type="password" class="form-control" id="pass1">
+                        <input type="password" class="form-control" name = "pass1" id="pass1">
                     </div>
                 <!--</form>-->
             </div>
@@ -20,7 +20,7 @@
                         <label for="pass2">Re-enter Password</label>
                         <!--<input type="password" class="form-control" id="pass2" placeholder="Re-enter password">-->
                         <input type="password" class="form-control" name="pass2" id="pass2"
-                               osnkeyup="checkPass(); return false;" >
+                               onkeyup="checkPass(); return false;" >
                         <span id="confirmMessage" class="confirmMessage"></span>
                     </div>
                 <!--</form>-->
