--- a/_login.html
+++ b/_login.html
@@ -14,7 +14,7 @@
             <div class="checkbox">
                 <input type="checkbox" value="remember-me" id="rememberMe" name="rememberMe"> Remember me<br>
             </div>
-            <button class="btn btn-lg btn-warning btn-block" id="login_butt" type="submit">Login</button>
+            <button class="btn waves-effect orange" id="login_butt" type="submit">Login</button>
         </div>
     </div>
 </div>
