--- a/_passwordRecovery.html
+++ b/_passwordRecovery.html
@@ -10,7 +10,7 @@
                 <input type="email" class="form-control" id="passRecovery_email">
                 <label for="passRecovery_email">Enter Email</label>
             </div>
-            <button type="submit" class="btn btn-primary" id="passRecovery_submit_email">Submit</button>
+            <a type="submit" class="btn bwaves-effect orange" id="passRecovery_submit_email">Submit</a>
         </div>
     </div>
 </div>
