--- a/_rateDriver.html
+++ b/_rateDriver.html
@@ -19,12 +19,12 @@
                 </div>
                 <div class="row">
                     <div class="col-xs-10 col-xs-offset-1">
-                        <button id="rate-driver" type="button" class="btn-block btn-lg btn-warning driverRate_button">
+                        <a id="rate-driver" type="button" class="btn waves-effect orange driverRate_button">
                             Rate!
-                        </button>
-                        <button id="rate-driver-skip" type="button" class="btn-block btn-lg btn-warning driverRate_button">
+                        </a>
+                        <a id="rate-driver-skip" type="button" class="btn waves-effect orange driverRate_button">
                             Skip
-                        </button>
+                        </a>
                     </div>
                 </div>
             </div>
