--- a/_receiptPictureEnterPrice.html
+++ b/_receiptPictureEnterPrice.html
@@ -17,7 +17,7 @@
                         <!--<div class="btn btn-default" id="takeReceiptButton1">Take Photo</div>-->
                         <!--<div class="btn btn-primary" id="redoReceiptButton1">Retake Photo</div>-->
                         <!--<h4>or</h4>-->
-                        <label class="btn btn-default">
+                        <label class="btn waves-effect orange">
                             Upload From File<input class="hidden" type="file" id="uploadReceipt1" name="imageLoader"/>
                         </label>
 
