--- a/_shopping.html
+++ b/_shopping.html
@@ -27,9 +27,9 @@
                 <div class="todo-footer">
                     <div class = "row" id="footerInfo">
                         <div class = "col-xs-4" id="shopping_numItems"></div>
-                        <button class = "col-xs-4" id="shopping_submit_list" type="button" class="btn btn-link">
+                        <a class = "col-xs-4" id="shopping_submit_list" type="button" class="btn waves-effect orange">
                             Submit
-                        </button>
+                        </a>
                     </div>
                 </div>
             </div>
