--- a/_shoppingStatus.html
+++ b/_shoppingStatus.html
@@ -12,8 +12,8 @@
             </div>
         </div>
     </div>
-    <button id="shoppingStatus_list_btn" type="button" class="btn btn-primary">
+    <a id="shoppingStatus_list_btn" type="button" class="btn waves-effect orange">
         Accepted Grocery List
-    </button>
+    </a>
 </div>
 <script src="js/_shoppingStatus.js"></script>
