--- a/_submitted.html
+++ b/_submitted.html
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="col-xs-4-offset-4">
             <h2>Payment submitted. Ticket is now posted!</h2>
-            <button id="submit_submitted" type="button" class="btn btn-primary">Confirm</button>
+            <a id="submit_submitted" type="button" class="btn waves-effect orange">Confirm</a>
         </div>
     </div>
 </div>
