--- a/_takeProfilePicture.html
+++ b/_takeProfilePicture.html
@@ -3,14 +3,14 @@
         <div class="col-md-4 col-lg-4" id="profile-button-box-outer">
             <div id="profile-button-box">
                 <h2>Profile Picture</h2>
-                <div class="btn btn-default" id="takeButton1">Take Photo</div>
-                <div class="btn btn-primary" id="redoButton1">Retake Photo</div>
+                <a class="btn waves-effect orange" id="takeButton1">Take Photo</a>
+                <a class="btn waves-effect orange" id="redoButton1">Retake Photo</a>
                 <h4>or</h4>
-                <label class="btn btn-default">
+                <label class="btn waves-effect orange">
                     Upload From File<input class="hidden" type="file" id="uploadImage1" name="imageLoader"/>
                 </label>
 
-                <div class="btn btn-primary" id="uploadButton1">Submit</div>
+                <a class="btn waves-effect orange" id="uploadButton1">Submit</a>
             </div>
         </div>
         <div class="col-md-8 col-lg-8" id="profile-outer">
