--- a/_viewTicket.html
+++ b/_viewTicket.html
@@ -17,9 +17,9 @@
                     <div id="_viewTicket_footerInfo">
                         <div id="_viewTicket_numItems"></div>
                         <div class="text-center">
-                            <button id="_viewTicket_submit_list" type="button" class="btn btn-link">
+                            <a id="_viewTicket_submit_list" type="button" class="btn waves-effect orange">
                                 Accept Ticket
-                            </button>
+                            </a>
                         </div>
 
                     </div>
