--- a/_passwordReset.html
+++ b/_passwordReset.html
@@ -28,7 +28,7 @@
         </div>
 
         <div class="row text-center">
-            <button type="submit" class="btn btn-primary" id="submitPass">submit</button>
+            <a type="submit" class="btn waves-effect orange" id="submitPass">submit</a>
         </div>
     </div>
 
