--- a/_rateUser.html
+++ b/_rateUser.html
@@ -19,12 +19,12 @@
                 </div>
                 <div class="row">
                     <div class="col-xs-10 col-xs-offset-1">
-                    <button id="rate-user" type="button" class="btn-block btn-lg btn-warning userRate_button">
+                    <a id="rate-user" type="button" class="btn waves-effect orange userRate_button">
                         Rate!
-                    </button>
-                    <button id="rate-user-skip" type="button" class="btn-block btn-lg btn-warning userRate_button">
+                    </a>
+                    <a id="rate-user-skip" type="button" class="btn waves-effect orange userRate_button">
                         Skip
-                    </button>
+                    </a>
                 </div>
             </div>
         </div>
