--- a/_signUp.html
+++ b/_signUp.html
@@ -49,7 +49,7 @@
         <!--<input type="text" class="form-control" name="usrtel" placeholder="Zip" id="signup_zip" required=""/><br>-->
         <!--<input type="password" class="form-control" name="password" placeholder="Create a password" id="signup_user_pass" required=""/><br>-->
         <!--<input type="password" class="form-control" name="password" placeholder="Confirm your password" id="signup_re_pass" required=""/><br>-->
-        <button class="btn btn-lg btn-warning btn-block" id="signup_butt" type="submit">Sign-Up</button><br>
+        <a class="btn waves-effect orange" id="signup_butt" type="submit">Sign-Up</a><br>
         </div>
     </div>
 </div>
