--- a/_accSetting.html
+++ b/_accSetting.html
@@ -1,8 +1,16 @@
+
 <div id="accSetting">
+
     <div class="container box2" style="text-align: center">
         <div class="row">
             <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
-                <h2>Account Information</h2>
+                <!--<h2>Account Information</h2>-->
+                <div id="user-image-content">
+                    <img  class="img-circle" id="accSettingAbove-img" src="placeholder/person5.png">
+                    <img  id="accSetting-img" src="placeholder/person5.png">
+
+                </div>
+                <br>
                 <div id="accProfile">
                     <form role="form" data-toggle="validator">
                         <div class="input-field">
