fixed button for shopping

--- a/_driverList.html
+++ b/_driverList.html
@@ -28,8 +28,8 @@
                     <div class="driver-footer">
                         <div class = "row" id="_driver_footerInfo">
                             <div class="col-xs-4" id="_driver_numItems"></div>
-                            <a class="col-x-4" id="_driver_submit_list" type="button" class="waves-teal btn-flat waves-effects orange">
-                                    <h6>submit</h6>
+                            <a id="_driver_submit_list" type="button" class="col-xs-4 waves-teal btn-flat waves-effects">
+                                    submit
                             </a>
                         </div>
                     </div>
