--- a/_shopping.html
+++ b/_shopping.html
@@ -27,7 +27,7 @@
                 <div class="todo-footer">
                     <div class = "row" id="footerInfo">
                         <div class = "col-xs-4" id="shopping_numItems"></div>
-                        <a class = "col-xs-4" id="shopping_submit_list" type="button" class="btn waves-effect orange">
+                        <a id="shopping_submit_list" type="button" class="col-xs-4 waves-teal btn-flat waves-effects">
                             Submit
                         </a>
                     </div>
