background Change ever 30 seconds

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 
     <script src="js/underscore.js"></script>
     <script src="js/loader.js"></script>
+
+    <!-- changes background every 30 seconds -->
+    <script src="js/_backgroundImage.js"></script>
+
 </head>
 <body style="overflow: hidden; position: relative;">
 <div id="notifications">
