disable button when input price is not number

--- a/_homePage.html
+++ b/_homePage.html
@@ -22,7 +22,7 @@
         <figure class="col-xs-6" data-store="tjs" id="Joe">
             <div class="shop">
                 <!--<img src="/resources/images/food2.jpg"/>-->
-                <h2 class="name"> Trader joe's </h2></div>
+                <h2 class="name"> Trader Joe's </h2></div>
         </figure>
 
         <figure class="col-xs-6" data-store="wholeFoods" id="WF">
