--- a/_receiptPictureEnterPrice.html
+++ b/_receiptPictureEnterPrice.html
@@ -22,11 +22,11 @@
                         </label>
 
                         <div class="input-field">
-                            <input type="text" class="form-control" name="username" id="enter_price"/><br>
-                            <label for="enter_price">Enter the price:</label>
+                            <input type="text" class="form-control" name="username" id="enter_price_receipt"/><br>
+                            <label for="enter_price_receipt">Enter the price:</label>
                         </div>
 
-                        <a class="btn waves-effects orange" id="uploadReceiptButton1">Submit</a>
+                        <a class="btn waves-effects orange disabled" id="uploadReceiptButton1">Submit</a>
                     </div>
                 <!--</div>-->
             </div>
