--- a/_rateDriver.html
+++ b/_rateDriver.html
@@ -2,14 +2,18 @@
 <div id="rating-page">
     <div class="container text-center box2">
         <div class="row">
-            <div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-4 col-md-4 col-lg-4 col-md-offset-4 col-lg-offset-4">
+            <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3">
                 <h2 id="driver-name_rateDriver" data-id="5876"></h2>
                 <h3>Rate the driver!</h3>
                 <div class="row">
-                    <div class="col-xs-8 col-xs-offset-2">
+                    <div class="col-xs-8-offset-2">
                         <img id="driver-image" src="/placeholder/person.png"/>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-10-offset-1 col-sm-6-offset-3">
                 <div class="rating">
                     <span id="driver_rating-1" class="glyphicon glyphicon-heart"></span>
                     <span id="driver_rating-2" class="glyphicon glyphicon-heart"></span>
