--- a/_cancelTicket.html
+++ b/_cancelTicket.html
@@ -1,11 +1,11 @@
-<div id="cancelTicket" class="container" style="text-align: center">
+<div id="cancelTicket" class="container text-center box2">
     <div class="row">
         <div class="col-xs-4-offset-4">
 
             <h2>Cancel pending order.</h2>
 
             <div class="row">
-                <a id="submit_cancelTicket" type="button" class="btn waves-effects orange" style="margin-bottom: 10%">Confirm</a>
+                <a id="submit_cancelTicket" type="button" class="btn waves-effects orange">Confirm</a>
             </div>
         </div>
     </div>
