--- a/_accSetting.html
+++ b/_accSetting.html
@@ -8,13 +8,13 @@
                 <!--<h2>Account Information</h2>-->
                 <div id="user-image-content">
                     <img  class="img-circle" id="accSettingAbove-img" src="placeholder/person5.png">
-                    <img  id="accSetting-img" src="placeholder/person5.png">
+
 
                 </div>
                 <br>
 
             <div class="col-xs-4-offset-4 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
-                <h2>Account Information</h2>
+                <!--<h2>Account Information</h2>-->
 
                 <div id="accProfile">
                     <form role="form" data-toggle="validator">
@@ -35,7 +35,7 @@
                                    id="accsetting_phone">
                         </div>
 
-                        <h2>Address</h2>
+                        <!--<h2>Address</h2>-->
                         <div class="input-field">
                             <label for="accsetting_street">Street:</label>
                             <input type="text" class="form-control" id="accsetting_street">
